<resources>
    <string name="app_name">KeepSave</string>
    <string name="signInEmail">E-mail</string>
    <string name="signInPassword">Password</string>
    <string name="buttonSignIn">Sign in</string>
    <string name="buttonSignUp">I don\'t have an account yet</string>
    <string name="emailSignInError">Enter your e-mail</string>
    <string name="passwordSignInError">Password should contain at least 6 characters</string>
    <string name="signInError">Check that the data is entered correctly and try again</string>
    <string name="textViewSignUp">Registering a new user</string>
    <string name="signUpEmail">Enter your email</string>
    <string name="buttonSignUpEmail">Continue</string>
    <string name="emailSignUpError">Incorrect email</string>
    <string name="emailConfirmDialogTitle">"Your email:\n"</string>
    <string name="emailConfirmDialogMessage">Please, check the correctness of the entered email. A confirmation email will be sent to it</string>
    <string name="emailConfirmDialogNegativeButton">Change email</string>
    <string name="emailConfirmDialogPositiveButton">All right</string>
    <string name="buttonSignUpCreate">Create account</string>
    <string name="editTextSignUpPassword">Create a password</string>
    <string name="editTextSignUpPasswordRepeat">Repeat password</string>
    <string name="passwordSignUpFillingError">Password doesn\'t fit</string>
    <string name="passwordsSignUpAreNotSameError">Passwords don\'t match</string>
    <string name="passwordSignUpHelperText">Password must contain at least 6 characters(numbers, upper and lowercase letters)</string>
    <string name="textViewEmailConfirm">Check your email</string>
    <string name="signUpError">It looks like a user with this mail already exists</string>
    <string name="emailSentError">Failed to send email. It may have already been sent before, please check your spam folder</string>
    <string name="buttonConfirmEmail">I confirmed the email</string>
    <string name="menu_item_add_idea">Add idea</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="item_selection">itemSelection</string>
    <string name="action_selected">%d selected</string>
    <string name="menu_item_edit">Edit idea</string>
    <string name="menu_item_share">Share idea</string>
    <string name="menu_item_delete">Delete idea</string>
    <string name="menu_item_add_to_favorites">Add to favorites</string>
    <string name="buttonExitEmail">Exit</string>
    <string name="menu_item_edit_idea">Edit idea</string>
    <string name="textViewDateAndTime">Time</string>
    <string name="saving_idea_result_saved">Changes saved</string>
    <string name="saving_idea_result_error_filling">Fill the title</string>
    <string name="saving_idea_result_error_checking">Nothing to save</string>
</resources>